gitconfig - utilisation de diffmerge

--- a/.gitconfig
+++ b/.gitconfig
@@ -32,6 +32,7 @@
   undo = reset HEAD^
   pr = pull --rebase
   pushmaster = push origin master:aromanet
+  mt = mergetool --tool=diffmerge -y
 
 [core]
   editor = vim
@@ -47,9 +48,10 @@
 [merge]
   tool=diffmerge
 [mergetool "diffmerge"]
-  cmd = ~/workspace/myscripts/Git/git-merge-diffmerge-wrapper.sh "$PWD/$LOCAL", "$PWD/$BASE" "$PWD/$REMOTE" "$PWD/$MERGED"
-  trustExitCode = false
-  keepBackup = false
+#  cmd = ~/workspace/myscripts/Git/git-merge-diffmerge-wrapper.sh "$PWD/$LOCAL", "$PWD/$BASE" "$PWD/$REMOTE" "$PWD/$MERGED"
+  cmd=diffmerge --merge --result=$MERGED $LOCAL $BASE $REMOTE
+  trustExitCode=false
+  keepBackup=false
 
 
 [credential]
