XMOBAR - utilisation de chemin absolu

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -10,8 +10,8 @@ Config {font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*-*-*"
                     , Run Swap [] 10
                     , Run Date "%a %b %_d %k:%M" "date" 10
                     , Run StdinReader
-                    , Run Com "~/.xmonad/bin/hudsonStatus.rb" [""]  "hudson" 10
-                    , Run Com "~/.xmonad/bin/internetStatus.rb" [""]  "internet" 100
+                    , Run Com "ruby" ["/home/aromanet/.xmonad/bin/hudsonStatus.rb"] "hudson" 10
+                    , Run Com "ruby" ["/home/aromanet/.xmonad/bin/internetStatus.rb"] "internet" 100
 
                     ]
        , sepChar = "%"
