--- a/.xmobarrc
+++ b/.xmobarrc
@@ -10,12 +10,10 @@ Config {font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*-*-*"
                     , Run Swap [] 10
                     , Run Date "%a %b %_d %k:%M" "date" 10
                     , Run StdinReader
-                    , Run Com "ruby" ["/home/aromanet/.xmonad/bin/hudsonStatus.rb"] "hudson" 10
-                    , Run Com "ruby" ["/home/aromanet/.xmonad/bin/internetStatus.rb"] "internet" 100
 
                     ]
        , sepChar = "%"
        , alignSep = "}{"
        --, template = "%StdinReader% }{ %hudson% | %cpu% | %memory% * %swap% | %eth0% | <fc=#ee9a00>%date%</fc>"
-       , template = "%StdinReader% }{ %hudson% %internet% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc>"
+       , template = "%StdinReader% }{ %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc>"
 }
