--- a/.gitconfig
+++ b/.gitconfig
@@ -38,6 +38,7 @@
 [core]
   editor = vim
   pager = less -XF
+  excludesfile = ~/.config/git/ignore
 
 [push]
   default = upstream  #pour ne pusher que la branche courante
