--- a/.xmobarrc
+++ b/.xmobarrc
@@ -10,10 +10,11 @@ Config {font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*-*-*"
                     , Run Swap [] 10
                     , Run Date "%a %b %_d %k:%M" "date" 10
                     , Run StdinReader
+		    , Run Com "ruby" ["/home/audrey/.xmonad/bin/top3.rb"] "web-top3" 10
 		    , Run Com "ruby" ["/home/audrey/.xmonad/bin/hudson.rb", "Top3"] "hudson-top3" 10
 
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %hudson-top3% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc>"
+       , template = "%StdinReader% }{ %web-top3% %hudson-top3% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc>"
 }
