--- a/.xmobarrc
+++ b/.xmobarrc
@@ -17,5 +17,5 @@ Config {font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*-*-*"
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %velib% | %volume% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc>"
+       , template = "%StdinReader% }{ %jenkins%  %velib% | %volume% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc>"
 }
