[GIT] git checkout partial name

--- a/.gitconfig
+++ b/.gitconfig
@@ -24,9 +24,8 @@
 [alias]
   lola = log --graph --decorate --abbrev-commit --all
   loln = log --graph --decorate --abbrev-commit -n20 HEAD
-  chk = checkout
-  # chr : trouve une branche contenant l'arg et checkout dessus. Ex: git chr 1756 => git chk features/jira-1756
-  chr = !sh -c \"git branch -a | grep -v remotes | grep $1 | xargs git checkout\"
+  # trouve une branche contenant l'arg et checkout dessus. Ex: git chk 1756 => git checkout features/jira-1756
+  chk = !sh -c \"git branch -a | grep -v remotes | grep $1 | xargs git checkout\"
   co = commit -m
   com = commit --amend
   st = status
