--- a/.gitconfig
+++ b/.gitconfig
@@ -36,6 +36,7 @@
   mt = mergetool --tool=diffmerge -y
   dt = difftool --tool=diffmerge -y
   search = !sh -c \"git log --format="%h" -n 1 --grep $1 | xargs git branch -a --contains\"
+  search-tag = !sh -c \" git log --format="%h" -n 1 --grep $1 | xargs git name-rev --tag --name-only\"
 
 [core]
   editor = vim
