[XMOBAR] Display battery status

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -5,6 +5,7 @@ Config {font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*-*-*"
        --, position = Static { xpos = 0 , ypos = 0 , width = 96 , height = 16 }
        , lowerOnStart = False
        , commands = [ Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
+       		    , Run Com "ruby" ["/home/aromanet/.xmonad/bin/battery.rb"] "battery" 2
                     , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
@@ -19,5 +20,5 @@ Config {font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*-*-*"
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %jenkins% %jenkins319% - %develop% %velib% | %volume% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc>"
+       , template = "%StdinReader% }{ %jenkins% %jenkins319% - %develop% %velib% | %volume% | %cpu% | %memory% * %swap% | %battery% | <fc=#ee9a00>%date%</fc>"
 }
