--- a/.xmobarrc
+++ b/.xmobarrc
@@ -12,9 +12,9 @@ Config {font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*-*-*"
                     , Run Date "%a %b %_d %k:%M" "date" 10
                     , Run StdinReader
 		    , Run Com "sh" ["/home/aromanet/.xmonad/bin/sound_volume.sh"] "volume" 2
-		    , Run Com "sh" ["/home/aromanet/.xmonad/bin/launchGroovy.sh", "parse", "$JENKINS_ENDPOINT/view/12.SPECIFIC%20BRANCH%20PIPELINE/api/json"] "jenkins" 5
-		    , Run Com "sh" ["/home/aromanet/.xmonad/bin/launchGroovy.sh", "develop"] "develop" 5
-		    , Run Com "sh" ["/home/aromanet/.xmonad/bin/launchGroovy.sh", "velib"] "velib" 5
+		    , Run Com "sh" ["/home/aromanet/.xmonad/bin/launchRuby.sh", "specific_branch", "12.SPECIFIC%20BRANCH%20PIPELINE"] "jenkins" 5
+		    , Run Com "sh" ["/home/aromanet/.xmonad/bin/launchRuby.sh", "develop"] "develop" 5
+		    , Run Com "sh" ["/home/aromanet/.xmonad/bin/launchRuby.sh", "velib"] "velib" 5
 
                     ]
        , sepChar = "%"
