--- a/.gitconfig
+++ b/.gitconfig
@@ -37,7 +37,7 @@
   dt = difftool --tool=diffmerge -y
   search = !sh -c \"git log --format="%h" -n 1 --grep $1 | xargs git branch -a --contains\"
   search-tag = !sh -c \" git log --format="%h" -n 1 --grep $1 | xargs git name-rev --tag --name-only\"
-  a = number add
+  a = number add -A
   rs = number reset
   cc = number checkout
 
