[GIT] Automatic prune when pulling

--- a/.gitconfig
+++ b/.gitconfig
@@ -67,3 +67,5 @@
   helper = cache
 [url "https://"]
   insteadOf = git:// #utilisation du protocole https au lieu de git lors d'un clone
+[fetch]
+	prune = true
