--- a/.gitconfig
+++ b/.gitconfig
@@ -38,7 +38,8 @@
   search = !sh -c \"git log --format="%h" -n 1 --grep $1 | xargs git branch -a --contains\"
   search-tag = !sh -c \" git log --format="%h" -n 1 --grep $1 | xargs git name-rev --tag --name-only\"
   a = number add -A
-  rs = number reset
+  r = number rm
+  rs = number reset HEAD
   cc = number checkout
 
 [core]
