--- a/terminator.config
+++ b/terminator.config
@@ -4,7 +4,7 @@
 [profiles]
   [[default]]
     scroll_on_output = False
-    font = Inconsolata-g for Powerline Medium 10
+    font = DejaVu Sans Mono 10
     use_system_font = False
     scrollback_infinite = True
     background_image = None
